--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,5 @@ dj-database-url==0.4.1
 Django==1.10.1
 django-bootstrap-datepicker==1.1.1
 django-bootstrap-form==3.2.1
+psycopg2==2.6.2
 wheel==0.24.0
